--- a/ColorPalette/Storyboards/Base.lproj/Main.storyboard
+++ b/ColorPalette/Storyboards/Base.lproj/Main.storyboard
@@ -130,7 +130,7 @@
                                                             <constraint firstAttribute="width" constant="50" id="c6g-ON-2UQ"/>
                                                         </constraints>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                                     </textField>
                                                 </subviews>
                                                 <constraints>
@@ -167,7 +167,7 @@
                                                             <constraint firstAttribute="width" constant="50" id="Kis-tC-8oJ"/>
                                                         </constraints>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                                     </textField>
                                                 </subviews>
                                                 <constraints>
